--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,83 @@
-<H1>hELLO wORLD</H1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/main.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <title>Portfolio</title>
+</head>
+
+<body>
+  <div class="frame">
+    <div class="main_frame">
+      <div class="left_frame">
+        <div class="left_1">
+          <div class="left_1-1">
+            <img src="images/profile.png" alt="" width="156px" height="142px" />
+          </div>
+          <div class="left_1-2">
+            <%=user.name%>
+          </div>
+          <div class="left_1-3">
+            <%=user.profession%>
+          </div>
+          <div class="left-icons">
+            <a class="link_href" href="">
+              <div class="icon">
+                <img src="icon/facebook.svg" class="icon-1" />
+              </div>
+            </a>
+            <a class="link_href" href="">
+              <div class="icon">
+                <img src="icon/instagram.svg" class="icon-1" />
+              </div>
+            </a>
+            <a class="link_href" href="">
+              <div class="icon">
+                <img src="icon/twitter.svg" class="icon-1"/>
+              </div>
+            </a>
+            <a class="link_href" href="">
+              <div class="icon">
+                <img src="icon/linkedin.svg" class="icon-1" />
+              </div>
+            </a>
+            <a class="link_href" href="">
+              <div class="icon">
+                <img src="icon/youtube.svg" class="icon-1" />
+              </div>
+            </a>
+            <a class="link_href" href="">
+              <div class="icon">
+                <img src="icon/dribbble.svg" class="icon-1" />
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="marginer"></div>
+        <div class="left_2">
+        </div>
+        <div class="marginer"></div>
+        <div class="left_3">
+        </div>
+        <div class="marginer"></div>
+        <div class="left_4">
+        </div>
+        <div class="marginer"></div>
+        <div class="left_5">
+        </div>
+        <div class="marginer"></div>
+      </div>
+      <div class="midd_frame">
+      </div>
+      <div class="right_frame">
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
