--- a/views/author.ejs
+++ b/views/author.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
   <title>Portfolio</title>
 </head>
 
@@ -28,53 +29,271 @@
           <div class="left-icons">
             <a class="link_href" href="">
               <div class="icon">
-                <img src="icon/facebook.svg" class="icon-1" />
+                <img src="icon/Vector.svg" class="icon-1" />
               </div>
             </a>
             <a class="link_href" href="">
               <div class="icon">
-                <img src="icon/instagram.svg" class="icon-1" />
+                <img src="icon/Vector (1).svg" class="icon-1" />
               </div>
             </a>
             <a class="link_href" href="">
               <div class="icon">
-                <img src="icon/twitter.svg" class="icon-1"/>
+                <img src="icon/Vector (2).svg" class="icon-1" />
               </div>
             </a>
             <a class="link_href" href="">
               <div class="icon">
-                <img src="icon/linkedin.svg" class="icon-1" />
+                <img src="icon/Vector (4).svg" class="icon-1" />
               </div>
             </a>
             <a class="link_href" href="">
               <div class="icon">
-                <img src="icon/youtube.svg" class="icon-1" />
+                <img src="icon/Vector (5).svg" class="icon-1" />
               </div>
             </a>
             <a class="link_href" href="">
               <div class="icon">
-                <img src="icon/dribbble.svg" class="icon-1" />
+                <img src="icon/Vector (3).svg" class="icon-1" />
               </div>
             </a>
           </div>
         </div>
         <div class="marginer"></div>
         <div class="left_2">
+          <div class="left_2-1">
+            <div class="left_2-1_start">Age:</div>
+            <div class="left_2_1_end">
+              <%=user.age%>
+            </div>
+          </div>
+          <div class="left_2-1">
+            <div class="left_2-1_start">Residance:</div>
+            <div class="left_2-1_end">
+              <%=user.residence%>
+            </div>
+          </div>
+          <div class="left_2-1">
+            <div class="left_2-1_start">Freelance:</div>
+            <div class="left_2_1_end">Availabe</div>
+          </div>
+          <div class="left_2-1">
+            <div class="left_2-1_start">Address:</div>
+            <div class="left_2-1_end">
+              <%=user.address%>
+            </div>
+          </div>
         </div>
         <div class="marginer"></div>
         <div class="left_3">
+          <div class="intro_left">Languages</div>
+          <div class="left_3_1">
+            <div class="left_3_1_start">
+              <%=user.languages[0]%>
+            </div>
+            <div class="left_3_1_end">100%</div>
+          </div>
+          <div class="percentages">
+            <div class="percentages_in" style="width: 100%"></div>
+          </div>
+          <div class="left_3_1">
+            <div class="left_3_1_start">
+              <%=user.languages[1]%>
+            </div>
+            <div class="left_3_1_end">70%</div>
+          </div>
+          <div class="percentages">
+            <div class="percentages_in" style="width: 70%"></div>
+          </div>
+          <div class="left_3_1">
+            <div class="left_3_1_start">
+              <%=user.languages[2]%>
+            </div>
+            <div class="left_3_1_end">90%</div>
+          </div>
+          <div class="percentages">
+            <div class="percentages_in" style="width: 90%"></div>
+          </div>
         </div>
         <div class="marginer"></div>
         <div class="left_4">
+          <div class="intro_left">Skills</div>
+          <div class="left_3_1">
+            <div class="left_3_1_start">
+              <%=user.skills[0]%>
+            </div>
+            <div class="left_3_1_end">90%</div>
+          </div>
+          <div class="percentages">
+            <div class="percentages_in" style="width: 90%"></div>
+          </div>
+          <div class="left_3_1">
+            <div class="left_3_1_start">
+              <%=user.skills[1]%>
+            </div>
+            <div class="left_3_1_end">90%</div>
+          </div>
+          <div class="percentages">
+            <div class="percentages_in" style="width: 90%"></div>
+          </div>
+          <div class="left_3_1">
+            <div class="left_3_1_start">
+              <%=user.skills[2]%>
+            </div>
+            <div class="left_3_1_end">80%</div>
+          </div>
+          <div class="percentages">
+            <div class="percentages_in" style="width: 80%"></div>
+          </div>
+          <div class="left_3_1">
+            <div class="left_3_1_start">
+              <%=user.skills[3]%>
+            </div>
+            <div class="left_3_1_end">70%</div>
+          </div>
+          <div class="percentages">
+            <div class="percentages_in" style="width: 70%"></div>
+          </div>
+          <div class="left_3_1">
+            <div class="left_3_1_start">
+              <%=user.skills[4]%>
+            </div>
+            <div class="left_3_1_end">90%</div>
+          </div>
+          <div class="percentages">
+            <div class="percentages_in" style="width: 90%"></div>
+          </div>
         </div>
         <div class="marginer"></div>
         <div class="left_5">
+          <div class="intro_left" style="margin-bottom: 20px">
+            Extra Skills
+          </div>
+          <div class="left_5_1">
+            <img src="btn_icon/git.png" alt="" class="check" />
+            <%=user.extra_skills[0]%>
+          </div>
+          <div class="left_5_1">
+            <img src="btn_icon/ios.png" alt="" class="check" />
+            <%=user.extra_skills[1]%>
+          </div>
+          <div class="left_5_1">
+            <img src="btn_icon/djongo.png" alt="" class="check" />
+            <%=user.extra_skills[2]%>
+          </div>
+          <div class="left_5_1">
+            <img src="btn_icon/bootstrap.png" alt="" class="check" />
+            <%=user.extra_skills[3]%>
+          </div>
         </div>
         <div class="marginer"></div>
       </div>
       <div class="midd_frame">
+        <div class="banners">
+          <div class="banner_text">
+            <h1 class="text_main">Software Engineer for changing life</h1>
+            <p class="text_des">
+              <%=user.about_me%>
+            </p>
+            <div class="midd_left-btn">
+              <button class="midd_top-left-btn">HIRE ME
+                <img src="btn_icon/Frame.svg" alt="#">
+              </button>
+            </div>
+          </div>
+          <div class="banner_image">
+            <img src="/author/images/you.png" alt="" />
+          </div>
+        </div>
+        <div class="services">
+          <div class="services_intro">
+            <div>My services</div>
+            <div class="service_des">
+              <p>
+                <%=user.service_desc%>
+              </p>
+            </div>
+          </div>
+          <div class="services_cards">
+            <div class="services_item">
+              <img class="item_icons" src="/author/box_images/coding.svg" alt="" />
+              <h4 class="services_h1">Web development</h4>
+              <p class="services_p">Blog, E-commerce</p>
+            </div>
+            <div class="services_item">
+              <img class="item_icons" src="/author/box_images/illustration.png" alt="" />
+              <h4 class="services_h1">UI/UX Design</h4>
+              <p class="services_p">Mobile app, website design</p>
+            </div>
+            <div class="services_item">
+              <img class="item_icons" src="/author/box_images/microphone.png" alt="" />
+              <h4 class="services_h1">Sound Design</h4>
+              <p class="services_p">Voice Over, Beat Making</p>
+            </div>
+          </div>
+          <div class="services_cards">
+            <div class="services_item">
+              <img class="item_icons" src="/author/box_images/gaem.png" alt="" />
+              <h4 class="services_h1">Game Design</h4>
+              <p class="services_p">Character Design, Props & Objects</p>
+            </div>
+            <div class="services_item">
+              <img class="item_icons" src="/author/box_images/photographer.png" alt="" />
+              <h4 class="services_h1">Photography</h4>
+              <p class="services_p">portrait, product photography</p>
+            </div>
+            <div class="services_item">
+              <h5 class="services_h1" style="margin-top: 30px">
+                Advertising
+              </h5>
+              <p class="services_p_last">
+                <%=user.about_me%>
+              </p>
+              <p style="color: orange">Order now ></p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="right_frame">
+        <div class="top_alone">
+          <a class="right_item" href="">
+            <div class="right_icon mm">
+              <img src="/author/menu_icon/contrast.png" class="icon_itself" alt="" />
+            </div>
+          </a>
+        </div>
+        <div class="buttom_ones">
+          <a class="right_item" href="">
+            <div class="right_icon bb">
+              <img src="/author/menu_icon/home.png" class="icon_itself" alt="" />
+            </div>
+          </a>
+          <a class="right_item" href="">
+            <div class="right_icon">
+              <img src="/author/menu_icon/file-code.png" class="icon_itself" alt="" />
+            </div>
+          </a>
+          <a class="right_item" href="">
+            <div class="right_icon">
+              <img src="/author/menu_icon/cv.png" class="icon_itself" alt="" />
+            </div>
+          </a>
+          <a class="right_item" href="">
+            <div class="right_icon">
+              <img src="/author/menu_icon/Vector.png" class="icon_itself" alt="" />
+            </div>
+          </a>
+          <a class="right_item" href="">
+            <div class="right_icon">
+              <img src="/author/menu_icon/blog.png" class="icon_itself" alt="" />
+            </div>
+          </a>
+          <a class="right_item" href="">
+            <div class="right_icon">
+              <img src="/author/menu_icon/Contact.png" class="icon_itself" alt="" />
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
