--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -4,31 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purchase Page</title>
+    <title>Plans Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 </head>
+
 <body style="background-color: #b8bbd1;">
     <div class="container">
         <h1 class="display-4 text-center py-1">Plans and Goals</h1>
         <div class="jumbotron p-3 shadow-sm">
             <form id="create-form" action="/create-item" method="POST">
                 <div class="d-flex align-items-center">
-                    <input type="text"
-                        id="create-field"
-                        name="item"
-                        autofocus
-                        autocomplete="off"
-                        class="form-control mr-3"
-                        type="text"
-                        style="flex: 1"
-                    />
+                    <input type="text" id="create-field" name="item" autofocus autocomplete="off"
+                        class="form-control mr-3" type="text" style="flex: 1" />
                     <button class="btn btn-primary" style="border-radius: 20px;">
-                        Add New Purchase
+                        Add New Plan
                     </button>
                 </div>
             </form>
         </div>
+        <button id= "clean-all" class="btn btn-danger" style="border-radius: 20px">
+            Delete All Plans
+        </button>
     </div>
 </body>
+
 </html>
