--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -40,6 +40,9 @@
             Delete All Plans
         </button>
     </div>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
 </body>
 
 </html>
